# efibootguard

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis-build.sh  .travis.yml  CONTRIBUTING.md  Makefile.am  README.md  SECURITY.md  bootguard.c  configure.ac  gen_version_h  libebgenv.pc.in  loader_interface.c  main.c  print.c  simatic.c  utils.c  watchdog.c
.github/workflows/: coverity.yaml  main.yaml
completion/: .gitignore  common.py
completion/bg_printenv/: cli.py
completion/bg_setenv/: cli.py
docs/: API.md  COMPILE.md  RECOVERY.md  TODO.md  TOOLS.md  UNIFIED-KERNEL.md  UPDATE.md  USAGE.md
drivers/utils/: simatic.c  smbios.c
drivers/watchdog/: amdfch_wdt.c  atom-quark.c  eiois200_wdt.c  hpwdt.c  i6300esb.c  init_array_end.S  init_array_start.S  ipc4x7e_wdt.c  ipcbx21a.c  ipmi_wdt.c  itco.c  w83627hf_wdt.c  wdat.c  wdfuncs_end.c  wdfuncs_start.c
env/: Makefile  env_api.c  env_api_crc32.c  env_api_fat.c  env_config_file.c  env_config_partitions.c  env_disk_utils.c  fatvars.c  syspart.c  uservars.c
include/: bootguard.h  configuration.h  ebgdefs.h  ebgenv.h  ebgpart.h  env_api.h  env_config_file.h  env_config_partitions.h  env_disk_utils.h  envdata.h  loader_interface.h  mmio.h  print.h  simatic.h  smbios.h  syspart.h  test-interface.h  uservars.h  utils.h  watchdog.h
kernel-stub/: fdt.c  initrd.c  kernel-stub.h  main.c
m4/: arch.m4
scripts/: cppcheck.sh  make_release
swupdate-adapter/: Makefile  ebgenv.c  ebgenv.h  swupdate.md
tests/: bg_setenv.bats
tools/: bg_envtools.c  bg_envtools.h  bg_gen_unified_kernel  bg_printenv.c  bg_printenv.h  bg_setenv.c  bg_setenv.h  bg_utils.c  bg_utils.h  ebgpart.c  ebgpart.h  fat.c  fat.h  linux_util.h  main.c  test-interface.h
tools/tests/: Makefile  Makefile.am  fake_devices.c  fake_devices.h  test_api.c  test_bgenv_init_retval.c  test_ebgenv_api.c  test_ebgenv_api_internal.c  test_environment.c  test_fat.c  test_main.c  test_partitions.c  test_probe_config_file.c  test_probe_config_partitions.c  test_uservars.c
